--- a/zipkin-web/debian/changelog
+++ b/zipkin-web/debian/changelog
@@ -9,3 +9,9 @@ zipkin-web (1.1.0-1) unstable; urgency=low
   * Use JavaServerAppPackaging to automatically assign right on log folder and do other stuff.
 
  -- Anton Matveenko <antmat@yandex-team.ru>  Wed, 19 Aug 2015 14:33:10 +0300
+
+zipkin-web (1.1.0-2) unstable; urgency=low
+
+  * Add cocaine logo. Add trace id on page.
+
+ -- Anton Matveenko <antmat@yandex-team.ru>  Wed, 19 Aug 2015 14:33:10 +0300
