[Fix] Move debian to right folder.

--- a/zipkin-web/debian/changelog
+++ b/zipkin-web/debian/changelog
@@ -1,3 +1,10 @@
+zipkin-web (1.1.0-3) unstable; urgency=low
+
+  * Merge with upstream.
+  * Checkbox for duration sorting.
+
+ -- Anton Matveenko <antmat@yandex-team.ru>  Wed, 19 Aug 2015 14:33:10 +0300
+
 zipkin-web (1.1.0-2) unstable; urgency=low
 
   * Add cocaine logo. Add trace id on page.
