--- a/zipkin-query-service/debian/changelog
+++ b/zipkin-query-service/debian/changelog
@@ -1,3 +1,9 @@
+zipkin-query-service (1.22.2-2) unstable; urgency=low
+
+  * Proper span ordering.
+
+ -- Anton Matveenko <antmat@yandex-team.ru>  Fri, 27 Nov 2015 09:54:00 +0300
+
 zipkin-query-service (1.22.2-1) unstable; urgency=low
 
   * Merge with upstream
